--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+h1, h2, h3, h4 { font-family:  'Montserrat', sans-serif; }
+body { margin: 0; font-family: 'Open sans', "Helvetica Neue", sans-serif; }
