first version of home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,18 @@
-<p>
-  home works!
-</p>
+<app-header></app-header> 
+
+<div class="margin">
+    <div class="row">
+        <div class="col-3 offset-1">
+            <button class="favorite styled"type="button">Carte</button>
+        </div>
+        
+        <div class="col-3 offset-1">
+            <button class="favorite styled"type="button">Mes infos</button>
+        </div>
+
+        <div class="col-3 offset-1">
+            <button class="favorite styled"type="button">Stat</button> 
+        </div>
+    </div>
+</div>
+
