files modified to call api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
 <router-outlet></router-outlet>
+
+<div *ngFor="let barle of barley">
+    <p>{{ barle.id }}</p>
+    <p>{{ barle.yield }}</p>
+    <p>{{ barle.place }}</p>
+</div>
