--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <router-outlet></router-outlet>
-
-<div *ngFor="let bar of barley">
+<!-- <div *ngFor="let bar of barley">
     <p>{{ bar.phone }}</p>
     <p>{{ bar.comment }}</p>
     <p>{{ bar.humidity }}</p>
@@ -29,3 +28,4 @@
     <p>{{ climat.comment }}</p>
     <p>{{ climat.humidity }}</p>
 </div>
+-->
