--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,1 @@
-<h1>MOISSON LIVE</h1>
+<h1 class="mt-3 text-dark">MOISSON <span class="bg-success rounded pl-2 pr-3 text-light font-weight-bold">LIVE</span></h1>
