add buttons on home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,7 @@
-<app-header></app-header> 
+<app-header></app-header>
 
-<div class="margin">
-    <div class="row">
-        <div class="col-3 offset-1">
-            <button class="favorite styled"type="button">Carte</button>
-        </div>
-        
-        <div class="col-3 offset-1">
-            <button class="favorite styled"type="button">Mes infos</button>
-        </div>
-
-        <div class="col-3 offset-1">
-            <button class="favorite styled"type="button">Stat</button> 
-        </div>
-    </div>
+<div class="text-center mb-3">
+        <button type="button" class="col-3 col-sm-1 btn btn-success font-weight-bold">MAP</button>
+        <button type="button" class="offset-5 col-3 col-sm-1 btn btn-success font-weight-bold">ADD MY RESULTS</button>
 </div>
+
