--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,11 @@
 h1{
     text-align: center;
+    font-size: 5em;
+    text-decoration: none;
+    
+}
+
+strong{
+    color: #5a9449;
+    font-style: italic;
 }
