--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,16 @@
-<app-header></app-header> 
+<app-header></app-header>
+<br><br>
 
-<div class="margin">
+<div class="container text-center mb-3">
     <div class="row">
-        <div class="col-3 offset-1">
-            <button class="favorite styled"type="button">Carte</button>
-        </div>
-        
-        <div class="col-3 offset-1">
-            <button class="favorite styled"type="button">Mes infos</button>
+        <div class="col-4"></div>
+
+        <div class="container row col-4">
+            <button mat-raised-button type="button" class="col-5 btn btn-success font-weight-bold">CARTE</button>
+            <div class="col-2"></div>
+            <button mat-raised-button type="button" class="col-5 btn btn-success font-weight-bold">STAT</button>
         </div>
 
-        <div class="col-3 offset-1">
-            <button class="favorite styled"type="button">Stat</button> 
-        </div>
+        <div class="col-4"></div>
     </div>
 </div>
