presentation design home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,11 +6,11 @@
         <div class="col-4"></div>
 
         <div class="container row col-4">
-            <button mat-raised-button type="button" class="col-5 btn btn-success font-weight-bold">CARTE</button>
+            <button mat-raised-button type="button" class="bouton col-5 btn btn-success font-weight-bold">CARTE</button>
             <div class="col-2"></div>
-            <button mat-raised-button type="button" class="col-5 btn btn-success font-weight-bold">STAT</button>
+            <button mat-raised-button type="button" class="bouton col-5 btn btn-success font-weight-bold">VOS DONNEES</button>
         </div>
-
-        <div class="col-4"></div>
+        <br>
+        <br>
     </div>
 </div>
