layout index page

--- a/src/app/buttons-type/buttons-type.component.html
+++ b/src/app/buttons-type/buttons-type.component.html
@@ -2,20 +2,20 @@
   <div class="row">
 
     <div class="col-2 text-center">
-      <a href="#"><img src="../../assets/img/ble.jpg" alt="" class="mais mt-5 border border-success rounded"></a>
+      <a href="#"><img src="../../assets/img/ble.jpg" alt="" class="mais mt-1 mb-4 border rounded"></a>
     </div>
     <div class="col-3 text-center">
       <a href="#"><img src="../../assets/img/colza.jpg" alt=""
-          class="mais mt-5 border border-success rounded"></a>
+          class="mais mt-1 border rounded"></a>
     </div>
     <div class="col-2 text-center">
-      <a href="#"><img src="../../assets/img/mais.jpg" alt="" class="mais mt-5 border border-success rounded"></a>
+      <a href="#"><img src="../../assets/img/mais.jpg" alt="" class="mais mt-1 border rounded"></a>
     </div>
     <div class="col-3 text-center">
-      <a href="#"><img src="../../assets/img/orge.jpg" alt="" class="mais mt-5 border border-success rounded"></a>
+      <a href="#"><img src="../../assets/img/orge.jpg" alt="" class="mais mt-1 border rounded"></a>
     </div>
     <div class="col-2 text-center">
-        <a href="#"><img src="../../assets/img/tournesol.jpg" alt="" class="mais mt-5 border border-success rounded"></a>
+        <a href="#"><img src="../../assets/img/tournesol.jpg" alt="" class="mais mt-1 border rounded"></a>
       </div>
   </div>
 </div>
