--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,8 @@ div {
     background-image: url('../assets/magalouche.jpg');
     background-size: 100%;
     min-height: 100%;
+    background-position: center center;
+    background-size: cover
 }
 
 
