--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
+<div class="pt-5">
 <router-outlet></router-outlet>
+</div>
 <!-- <div *ngFor="let bar of barley">
     <p>{{ bar.phone }}</p>
     <p>{{ bar.comment }}</p>
