--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,46 +1,24 @@
-<app-header></app-header>
-<br><br>
-
-<div class="container text-center mb-3">
-
-
-<app-header></app-header>
-
-<div class="text-center mb-3">
-        <button type="button" class="col-3 col-sm-1 btn btn-success font-weight-bold">MAP</button>
-        <button type="button" class="offset-5 col-3 col-sm-1 btn btn-success font-weight-bold">ADD MY RESULTS</button>
-</div>
-
-<app-header></app-header> 
-<div class="margin">
-
-    <div class="row">
-        <div class="col-4"></div>
-
-        <div class="container row col-4">
-            <button mat-raised-button type="button" class="bouton col-5 btn btn-success font-weight-bold">CARTE</button>
-            <div class="col-2"></div>
-            <button mat-raised-button type="button" class="bouton col-5 btn btn-success font-weight-bold">VOS DONNEES</button>
-        </div>
-        <br>
-        <br>
-    </div>
-</div>
-<div class="container">
-    <div class="col-8 offset-2" id="map">
-      <!-- Map -->
+<div class="back mx-auto rounded mb-5 pb-3">
+  <app-header></app-header>
+  <br>
+  <!-- Nav -->
+  <div class="row">
+    <div class="col-4"></div>
+    <div class="container row col-4">
+      <button mat-raised-button type="button" class="bouton col-5 btn btn-success font-weight-bold">CARTE</button>
+      <div class="col"></div>
+      <button mat-raised-button type="button" class="bouton col-5 btn btn-success font-weight-bold">VOS
+        DONNEES</button>
     </div>
   </div>
-  <input type="number" [(ngModel)]="setLat1">
-  <input type="number" [(ngModel)]="setLon1">
-  
-  
-  <button (click)="addToMap(setLat1,setLon1,'sauce')">BOUTTOU</button>
-  <span>{{message}}</span>
-  
-  <div *ngIf="geolocationPosition">
-   <!--{{geolocationPosition.coords}}-->
-   {{geolocationPosition.coords.latitude}}
-   {{geolocationPosition.coords.longitude}}
+  <br>
+  <!-- Sous-Nav -->
+  <app-buttons-type></app-buttons-type>
+  <!-- Map -->
+  <div class="container mb-3">
+    <div class="col-12 pb-3" id="map">
+    </div>
   </div>
-  <button ng (click)="youAreHere()">where am i?</button>
+</div>
+
+<app-footer></app-footer>
