--- a/src/app/formulaire/formulaire.component.html
+++ b/src/app/formulaire/formulaire.component.html
@@ -1,7 +1,7 @@
 <form (ngSubmit)="onSubmit()" #myForm="ngForm">
 
   <div class="form-group">
-    <label for="specificWeight">Poid volumique</label>
+    <label for="specificWeight">Poid volumique<span>*</span> : </label>
     <input required [(ngModel)]="specificWeight" name="specificWeight" #SpecificWeight="ngModel" id="specificWeight"
       type="number" class="form-control">
   </div>
@@ -13,68 +13,68 @@
   </div>
 
   <div class="form-group">
-    <label for="yieldNotation">Notation de rendement</label>
+    <label for="yieldNotation">Notation de rendement<span>*</span> :</label>
     <input required min="1" max="5" [(ngModel)]="yieldNotation" #YieldNotation="ngModel" name="yNotation"
       id="yieldNotation" type="number" class="form-control">
-
+  </div>
+  <div *ngIf="myForm.submitted">
     <div class="alert alert-danger" *ngIf=" YieldNotation.errors ">
       <div *ngIf="YieldNotation.errors.required">une notation est requise .</div>
-      <div *ngIf="YieldNotation.errors.minlength">une notation doit apparaitre.</div>
+      <div *ngIf="YieldNotation.errors.min.max">une notation entre 1 et 5 inclus.</div>
     </div>
   </div>
 
   <div class="form-group">
-    <label for="place">Place</label>
-    <input required minlength="5" maxlength="15" [(ngModel)]="place" #Place="ngModel" id="place" name="place"
+    <label for="place">Ville<span>*</span> :</label>
+    <input required minlength="2" maxlength="15" [(ngModel)]="place" #Place="ngModel" id="place" name="place"
       type="text" class="form-control">
+  </div>
+  <div *ngIf="myForm.submitted">
     <div class="alert alert-danger" *ngIf="Place.errors">
-      <div *ngIf="Place.errors.required">place is required.</div>
-      <div *ngIf="Place.errors.minlength">place should be minimum 3 charactères.</div>
+      <div *ngIf="Place.errors.required">champs requis.</div>
+      <div *ngIf="Place.errors.minlength">champs requis au minimum 2 charactères.</div>
     </div>
   </div>
 
   <div class="form-group">
     <label for="variety">variety</label>
-    <input minlength="5" maxlength="15" [(ngModel)]="variety" #Variety="ngModel" name="variety" id="variety" type="text"
+    <input minlength="5" maxlength="30" [(ngModel)]="variety" #Variety="ngModel" name="variety" id="variety" type="text"
       class="form-control">
-    <div class="alert alert-danger" *ngIf="Variety.errors">
-      <div *ngIf="Variety.errors.required">Variety is required.</div>
-      <div *ngIf="Variety.errors.minlength">Variety should be minimum 5 charactères.</div>
-    </div>
   </div>
 
   <div class="form-group">
-    <label for="yield">yield</label>
+    <label for="yield">Rendement<span>*</span> :</label>
     <input [(ngModel)]="yield" #Yield="ngModel" id="yield" name="yield" type="number" class="form-control">
+  </div>
+  <div *ngIf="myForm.submitted">
     <div class="alert alert-danger" *ngIf="Yield.errors">
-      <div *ngIf="Yield.errors.required">Yield is required.</div>
-      <div *ngIf="Yield.errors.minlength">Yield should be minimum 1 number.</div>
+      <div *ngIf="Yield.errors.required">champs requis (chiffre(s)).</div>
     </div>
   </div>
 
   <div class="form-group">
-    <label for="humidity">humidity</label>
+    <label for="humidity">Humidité</label>
     <input [(ngModel)]="humidity" #Humidity="ngModel" name="humidity" id="humidity" type="number" class="form-control">
-    <div class="alert alert-danger" *ngIf="Humidity.errors">
-      <div *ngIf="Humidity.errors.required">Humidity is required.</div>
-      <div *ngIf="Humidity.errors.minlength">Humidity should be minimum 1 number.</div>
-    </div>
   </div>
 
   <div class="form-group">
-    <label for=" cultivationMethod">Produit Nitrogène utilisé</label>
-    <input required minlength="5" maxlength="15" [(ngModel)]="nitrogenProductUsed" #NitrogenProductUsed="ngModel"
+    <label for=" cultivationMethod">Produit Nitrogène utilisé<span>*</span> :</label>
+    <input required minlength="2" maxlength="30" [(ngModel)]="nitrogenProductUsed" #NitrogenProductUsed="ngModel"
       name="prduct" id="nitrogenProductUsed" type="text" class="form-control">
+  </div>
+  <div *ngIf="myForm.submitted">
     <div class="alert alert-danger" *ngIf="NitrogenProductUsed.errors">
       <div *ngIf="NitrogenProductUsed.errors.required">champs requis.</div>
-      <div *ngIf="NitrogenProductUsed.errors.minlength">Le champs doit contenir au minimum 5 lettre.</div>
+      <div *ngIf="NitrogenProductUsed.errors.minlength">Le champs doit contenir au minimum 2 lettre.</div>
     </div>
   </div>
 
   <div class="form-group">
-    <label for="nitrogenQuantityUsed">Quantité de Nitrogène</label>
+    <label for="nitrogenQuantityUsed">Quantité de Nitrogène<span>*</span> :</label>
     <input required [(ngModel)]="nitrogenQuantityUsed" #NitrogenQuantityUsed="ngModel" name="nitroQtUsed"
       id="nitrogenQuantityUsed" type="number" class="form-control">
+  </div>
+  <div *ngIf="myForm.submitted">
     <div class="alert alert-danger" *ngIf="NitrogenQuantityUsed.errors">
       <div *ngIf="NitrogenQuantityUsed.errors.required">champs requis.</div>
       <div *ngIf="NitrogenQuantityUsed.errors.minlength">le champs doit comporter un chiffre.</div>
@@ -82,55 +82,55 @@
   </div>
 
   <div class="form-group">
-    <label for=" cultivationMethod">Technique de production</label>
-   <select class="form-control" id="tp" required [(ngModel)]="cultivationMethod" #CultivationMethod="ngModel"
+    <label for=" cultivationMethod">Technique de production<span>*</span> :</label>
+    <select class="form-control" id="tp" required [(ngModel)]="cultivationMethod" #CultivationMethod="ngModel"
       name="cultiv">
       <option [value]="con">conventionnelle</option>
       <option [value]="scm">Methode simplifié</option>
     </select>
 
   </div>
-  
+
 
   <div class="form-group">
     <label for=" targetPrice">Prix ciblés</label>
     <input minlength="1" maxlength="15" [(ngModel)]="targetPrice" #TargetPrice="ngModel" name="tarPrice"
       id="targetPrice" type="number" class="form-control">
-    <div class="alert alert-danger" *ngIf="TargetPrice.errors">
-      <div *ngIf="TargetPrice.errors.required">champs requis.</div>
-      <div *ngIf="TargetPrice.errors.minlength">Le champs doit contenir au minimum 1 chiffre.</div>
-    </div>
   </div>
 
   <div class="form-group">
-    <label for="email">Email</label>
+    <label for="email">Email<span>*</span> :</label>
     <input required minlength="9" maxlength="50" [(ngModel)]="email" #Email="ngModel" n="ngModel"
       pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" id="email" type="text" placeholder="Email" name="mail"
       class="form-control">
+  </div>
+  <div *ngIf="myForm.submitted">
     <div class="alert alert-danger" *ngIf="Email.errors">
-      <div *ngIf="Email.errors.required">Email is required.</div>
-      <div *ngIf="Email.errors.pattern ">The email id doesn't seem right.</div>
+      <div *ngIf="Email.errors.required">email requis.</div>
+      <div *ngIf="Email.errors.pattern ">email non valide.</div>
     </div>
   </div>
 
   <div class="form-group">
-    <label for="phoneNumber">phoneNumber</label>
+    <label for="phoneNumber">Numéro de téléphone<span>*</span> :</label>
     <input required minlength="10" maxlength="10" [(ngModel)]="phoneNumber" #PhoneNumber="ngModel" name="numberPhone"
       id="phoneNumber" type="text" placeholder="phoneNumber" class="form-control">
+  </div>
+  <div *ngIf="myForm.submitted">
     <div class="alert alert-danger" *ngIf=" PhoneNumber.errors">
-      <div *ngIf="PhoneNumber.errors.required">Phone number is required</div>
-      <div *ngIf="PhoneNumber.errors.minlength">The phoneNumber id doesn't seem right</div>
+      <div *ngIf="PhoneNumber.errors.required">numéro de téléphone requis.</div>
+      <div *ngIf="PhoneNumber.errors.minlength">numéro de téléphone non valide.</div>
     </div>
   </div>
 
   <div class="form-group">
-    <label for="typeofseed">Type of Seed</label>
+    <label for="typeofseed">Type de récolte</label>
     <select class="form-control" id="tseed" required>
-      <option [value]="Corn">Corn</option>
-      <option [value]="Barley">Barley</option>
-      <option [value]="Wheat">Wheat</option>
-      <option [value]="Rapseed">Rapseed</option>
-      <option [value]="Sunflower">Sunflower</option>
+      <option [value]="Corn">Mais</option>
+      <option [value]="Barley">Orges</option>
+      <option [value]="Wheat">Blé</option>
+      <option [value]="Rapseed">Colza</option>
+      <option [value]="Sunflower">Tournesol</option>
     </select>
   </div>
 
@@ -140,4 +140,7 @@
   </div>
   <button class="btn btn-primary" type="submit">Submit </button>
 </form>
--->
+
+<div>
+  <span>*</span>Champs obligatoires
+</div>
