--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,9 +5,9 @@
   <div class="row">
     <div class="col-4"></div>
     <div class="container row col-4">
-      <button mat-raised-button type="button" class="bouton col-5 btn btn-success font-weight-bold">CARTE</button>
+      <button mat-raised-button type="button" class="bouton col-5 btn btn-success font-weight-bold" [routerLink]="['']">CARTE</button>
       <div class="col"></div>
-      <button mat-raised-button type="button" class="bouton col-5 btn btn-success font-weight-bold">VOS
+      <button mat-raised-button type="button" class="bouton col-5 btn btn-success font-weight-bold" [routerLink]="['formulaire']">VOS
         DONNEES</button>
     </div>
   </div>
